# atomkraft

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  Makefile  README.md  copier.yml  pylama.ini  pyproject.toml  setup.cfg  tendermock_integration.txt
.github/workflows/: cli.yml  e2e.yml  pingpub.yml  project.yml  python.yml  semantic-release.yml
atomkraft/: Reactor.py  constants.py
atomkraft/chain/: __init__.py  connector.py  coolfile.py  node.py  pytest.py  t.json  testnet.py  utils.py
atomkraft/cli/: __init__.py
atomkraft/config/: atomkraft_config.py  chain_config.py  config_file.py  model_config.py
atomkraft/model/: traces.py
atomkraft/reactor/: constants.py  reactor.py  step_functions_visitor.py  utils.py
atomkraft/reactor_room/: constants.py  reactor.py  reactor_room.py  step_functions_visitor.py
atomkraft/templates/cosmwasm/: README.md
atomkraft/templates/cosmwasm/cosmwasm-contract/schema/: execute_msg.json  query_msg.json
atomkraft/templates/cosmwasm/cosmwasm-contract/src/: contract.rs
atomkraft/templates/cosmwasm/models/: counter.tla
atomkraft/templates/transfer/: .gitignore  atomkraft.toml  chain.toml  pyproject.toml  pytest.ini
atomkraft/templates/transfer/reactors/: reactor.py
atomkraft/test/: __init__.py  helpers.py  model.py  test.py  trace.py
atomkraft/utils/: __init__.py  filesystem.py  helpers.py  project.py
doc/img/: atomkraft.drawio
doc/src/: adr02-atomkraft-init.md  adr02-trace-executor.md  adr03-atomkraft-init.md  adr04-reactor-stub
docs/src/: 01adr-cli.md  01adr-principles-architecture.md  05adr-test-execution.md
docs/src/adr/: 03adr-mc-executor.md  04adr-mc-task-file.md  04adr-reactor-stub.md  05adr-mc-executor.md
docs/src/adr04-reactor-stub/: adr04-reactor-stub.md
examples/: delegate.py
examples/cosmos-sdk/: Dockerfile  Makefile  README.md  client.sh  exec-trace.py  kraft-cosmos.py  setup.sh  start-node.sh  transfer.md
examples/cosmos-sdk/chain-setup/: init.sh
examples/cosmos-sdk/chain-setup/mnemonics/: user3.txt
examples/cosmos-sdk/generator/: MC_Staking.tla  README.md  Staking.tla  Staking_typedefs.tla
examples/cosmos-sdk/traces/: trace2.itf.json  trace3.itf.json  trace4.itf.json  trace5.itf.json  trace6.itf.json  trace7.itf.json
examples/cosmos-sdk/transfer/: example_trace.itf.json  reactor.py  transfer.md  transfer.tla
examples/cosmwasm/counter/: README.md  chain.toml  pyproject.toml
examples/cosmwasm/counter/.atomkraft/: config.toml
examples/cosmwasm/counter/cosmwasm-contract/: .gitignore  Cargo.toml  NOTICE  README.md
examples/cosmwasm/counter/models/: counter.tla
examples/cosmwasm/counter/reactors/: reactor.py
examples/cosmwasm/counter/tests/: test_wasm.py
examples/cosmwasm/counter/traces/: example1.itf.json  example10.itf.json  example2.itf.json  example3.itf.json  example4.itf.json  example5.itf.json  example6.itf.json  example7.itf.json  example8.itf.json  example9.itf.json
examples/cosmwasm/cw1_whitelist/: README.md  chain.toml  pyproject.toml
examples/cosmwasm/cw1_whitelist/contract/: cw1_whitelist.wasm
examples/cosmwasm/cw1_whitelist/models/: cw1_whitelist.tla
examples/cosmwasm/cw1_whitelist/reactors/: reactor.py
examples/cosmwasm/cw1_whitelist/traces/: allDifferent.itf.json  violation1.itf.json  violation2.itf.json  violation3.itf.json
examples/cosmwasm/wynd-dao/: chain.toml  pyproject.toml
examples/cosmwasm/wynd-dao/models/: curves.tla  cw20_vesting.tla
explorer/: Dockerfile  README.md
src/atomkraft/: __init__.py  connector.py  cosmos.py  eth.py  itf_parser.py
src/atomkraft_informal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
template/: atomkraft.toml  chain.toml  model.toml  modelator.toml  pyproject.toml.jinja  pytest.ini
tests/: __init__.py  cosmwasm.py  test_itf_parser.py  test_mbt.py  test_reactor.py  test_release.py  test_setup.py  test_utils.py  test_wasm.py
tests/cli/: Dockerfile  docker_entrypoint.sh  run-tests.sh  test_transfer.md
tests/contracts/: counter.wasm
tests/project/: chain.toml
tests/project/.atomkraft/: config.toml
tests/project/reactors/: sample_reactor.py
tests/project/traces/: sample_trace.itf.json
tests/reactors/: cosmwasm.py
transfer/: atomkraft.toml  chain.toml  genesis.json  model.toml  pyproject.toml  pytest.ini
transfer/.atomkraft/: config.toml
transfer/reactors/: connector.py  reactor.py  tendermock_client.py
transfer/tests/: log.txt  report.jsonl  test_test_alice_zero_violation1.py
transfer/traces/TestAliceZero/: violation1.itf.diff.md  violation1.itf.json  violation1.itf.md
