[tool.poetry]
name = "atomkraft"
version = "0.0.4"
description = "Testing for Cosmos Blockchains"
authors = [
    "Andrey Kuprianov <andrey@informal.systems>",
    "Hernán Vanzetto <hernan@informal.systems>",
    "Ivan Gavran <ivan@informal.systems>",
    "Ranadeep Biswas <mail@rnbguy.at>",
]
keywords = ["cosmos", "blockchain", "testing", "testnet"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/atomkraft"
include = ["LICENSE"]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
copier = "^6.1.0"
typer = {extras = ["all"], version = "^0.6.1"}
modelator = "^0.5.1"
numpy = "^1.22.4"
hdwallet = "^2.1.1"
bip-utils = "^2.3.0"
tabulate = "^0.8.9"
jsonrpcclient = "^4.0.2"
websockets = "^10.3"
GitPython = "^3.1.27"
tomlkit = "^0.11.1"
case-converter = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atomkraft = "atomkraft.cli:app"

[tool.poetry.plugins]
pytest11 = { atomkraft-chain = "atomkraft.chain.pytest" }

[tool.isort]
profile = "black"
known_third_party = ["atomkraft"]
src_paths = ["atomkraft", "test", "examples"]

[tool.pytest.ini_options]
pythonpath = "."
norecursedirs = "examples/*"
