[tool.poetry]
name = "atomkraft"
version = "0.1.1"
description = "Testing for Cosmos Blockchains"
authors = [
    "Andrey Kuprianov <andrey@informal.systems>",
    "Hernán Vanzetto <hernan@informal.systems>",
    "Ivan Gavran <ivan@informal.systems>",
    "Ranadeep Biswas <mail@rnbguy.at>",
]
keywords = ["cosmos", "blockchain", "testing", "testnet"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/atomkraft"
include = ["LICENSE"]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
copier = "^6.1.0"
typer = {extras = ["all"], version = "^0.6.1"}
modelator = "^0.6.5"
numpy = "^1.22.4"
hdwallet = "^2.1.1"
bip-utils = "^2.3.0"
tabulate = "^0.8.9"
jsonrpcclient = "^4.0.2"
websockets = "^10.3"
GitPython = "^3.1.27"
tomlkit = "^0.11.1"
case-converter = "^1.1.0"
pytest-reportlog = "^0.1.2"
terra-sdk = "^3.0.1"
terra-proto = "^2.1.0"
setuptools = "^65.3.0"
tenacity = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atomkraft = "atomkraft.cli:app"

[tool.poetry.plugins]
pytest11 = { atomkraft-chain = "atomkraft.chain.pytest" }

[tool.isort]
profile = "black"
known_third_party = ["atomkraft"]
src_paths = ["atomkraft", "test", "examples"]

[tool.pytest.ini_options]
pythonpath = "."
norecursedirs = "examples/*"

[tool.semantic_release]
version_variable = [
    "atomkraft/_version.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "template/pyproject.toml.jinja:atomkraft = \"\\^{version}\""
]
branch = "dev"
build_command = "pip install poetry && poetry build"
