[metadata]
name = atomkraft-informal
version = 0.0.5
author = Igor Konnov
author_email = igor@informal.systems
description = Scripting for E2E testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/informalsystems/atomkraft
project_urls =
  Bug Tracker = https://github.com/informalsystems/atomkraft/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
