[tool.poetry]
name = "counter"
version = "0.1.0"
description = ""
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]

[tool.poetry.dependencies]
python = "^3.10"
atomkraft = {git = "https://github.com/informalsystems/atomkraft", rev = "dev"}
terra-sdk = {git = "https://github.com/informalsystems/terra.py", rev = "rano/cosmos"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
