[tool.poetry]
name = "counter"
version = "0.1.0"
description = ""
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]

[tool.poetry.dependencies]
python = "^3.10"
atomkraft = "^0.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
